--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ background-color: #ddd;
 }
 .button-9 {
   appearance: button;
+  box-sizing: border-box;
+  padding: 0;
   backface-visibility: hidden;
   background-color: #405cf5;
   border-radius: 6px;
@@ -27,7 +29,7 @@ background-color: #ddd;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  width: 100%;
+  width: 100px;
 }
 
 .button-9:disabled {
@@ -52,6 +54,7 @@ body {
   margin: 0;
   font-family: -apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Ubuntu,sans-serif;
 }
+
 
 
 
