--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ background-color: #ddd;
   width: 100px;
 }
 
-.button-9:disabled {
+.button-9:disabled{
   cursor: default;
   background-color: #48559c;
 }
@@ -55,6 +55,18 @@ body {
   font-family: -apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Ubuntu,sans-serif;
 }
 
+.reload {
+border-radius: 5px;
+color: white;
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+margin-top: 10px;
+font-weight: bold;
+border: none;
+width: 100px;
+height: 30px;
+background-color: rgb(43, 43, 255);
+}
 
-
-
+canvas, #gameCanvas {
+  background: url("./Assets/sky.jpg");
+}
